# agentic_example

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.hf.toml  pyproject.toml  requirements-hf.txt
.github/workflows/: notebooks.yml
data/: letter_01_madrid_1871.txt  letter_02_seville_1894.txt  letter_03_ocr_fragment.txt  letter_04_barcelona_1902.txt  letter_05_porto_1888.txt  letter_06_ocr_table.txt
notebooks/: 01_single_agent_foundations.ipynb  02_multi_agent_handoffs.ipynb  03_guardrails_and_human_in_the_loop.ipynb  04_end_to_end_pipeline.ipynb  05_evaluation.ipynb  06_retrieval_and_tools.ipynb  07_state_management.ipynb  common.py
src/: __init__.py  hf_runner.py  pipeline.py
