[project]
name = "agentic-example"
version = "0.1.0"
description = "Teaching notebooks for agentic pipelines in digital humanities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents",
  "jupyterlab",
  "ipykernel",
  "ipywidgets",
  "pandas",
  "python-dotenv",
]

[tool.uv]

[dependency-groups]
dev = [
  "pytest",
  "nbmake",
  "pytest-asyncio",
]
